# ViMaker

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
ViMaker/: CMakeLists.txt  ViMaker.cpp  ViMaker.h  application.cpp  application.h
ViMaker/elems/: camera.h  input.h  light.h  mesh.cpp  mesh.h  vertex_holder.h
ViMaker/mesh_import/: import_base.h  import_obj.cpp
ViMaker/render/: opengl_buffer_manager.cpp  opengl_buffer_manager.h  opengl_context.cpp  render_base.h  ui_context.cpp
ViMaker/shader/: shader_util.cpp  shader_util.h
ViMaker/ui/: automatics_panel.cpp  automatics_panel.h  property_panel.cpp  property_panel.h  scene_view.cpp  scene_view.h
ViMaker/utils/: imgui_widgets.h  str_utils.h
ViMaker/window/: jgl_window.cpp  jgl_window.h  window.h
